# veloapp

./: README.md  capacitor.config.json  index.html  package-lock.json  package.json  pyproject.toml  server.py  test_results.txt  vercel.json
flet_backup/: main.py
flet_backup/views/: ahorros.py  clientes.py  creditos.py  gastos.py  home.py  horarios.py  ingresos.py  scanner.py
frontend/: ai_service.js  app.js  index.html  manifest.json  security.js  style.css  sw.js
src/: __init__.py
src/db/: database.py
src/utils/: ocr.py  theme.py
